// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`errors should add code as new generic error to request 1`] = `
Object {
  "code": 403,
  "message": "",
}
`;

exports[`errors should add code, string as new generic error to request 1`] = `
Object {
  "code": 403,
  "message": "foo",
}
`;

exports[`errors should add error as new generic error to request 1`] = `
Object {
  "code": "node-error",
  "message": "foo",
}
`;

exports[`errors should add new generic error to request 1`] = `
Object {
  "code": "foo",
  "message": "bar",
}
`;

exports[`errors should add string as new generic error to request 1`] = `
Object {
  "code": "node-error",
  "message": "foo",
}
`;

exports[`errors should return AUTH_INVALID_USER_TOKEN 1`] = `[Error: The user's credential is no longer valid. The user must sign in again.]`;
